# advent-of-code

./: .gitignore  README.md  pyproject.toml
2024/day01/: puzzle_1.py
2024/day02/: puzzle_2.py
2024/day04/: puzzle_4.py
2024/day05/: puzzle_5.py
2024/day06/: puzzle_6.py
2024/day09/: puzzle_9.py
2024/day11/: puzzle_11.py
2024/day21/: puzzle_21.py
2024/day22/: puzzle_22.py
2025/day01/: puzzle_1.py  test_day1.py
advent_of_code/2024/day03/: puzzle_3.py
advent_of_code/2024/day07/: puzzle_7.py
advent_of_code/2024/day08/: puzzle_8.py
advent_of_code/2024/day10/: puzzle_10.py
advent_of_code/2024/day12/: puzzle_12.py
advent_of_code/2024/day13/: puzzle_13.py
advent_of_code/2024/day14/: puzzle_14.py
advent_of_code/2024/day15/: puzzle_15.py
advent_of_code/2024/day16/: puzzle_16.py
advent_of_code/2024/day17/: puzzle_17.py
advent_of_code/2024/day18/: puzzle_18.py
advent_of_code/2024/day19/: puzzle_19.py
advent_of_code/2024/day20/: puzzle_20.py
advent_of_code/2024/day23/: puzzle_23.py
advent_of_code/2025/day01/: puzzle_1.py
advent_of_code/2025/day02/: puzzle_2.py
advent_of_code/2025/day03/: puzzle3.py
advent_of_code/2025/day04/: puzzle4.py
advent_of_code/2025/day05/: puzzle5.py
advent_of_code/2025/day06/: puzzle6.py
advent_of_code/2025/day07/: puzzle7.py
advent_of_code/2025/day08/: puzzle8.py
advent_of_code/2025/day09/: puzzle9.py
advent_of_code/2025/day11/: puzzle11.py
