[project]
name = "advent-of-code"
version = "0.0.0"
description = "My advent of code solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
packages = ["advent_of_code"]
